--- a/_config.yml
+++ b/_config.yml
@@ -11,9 +11,9 @@ owner:
   bio: "A Plant Geneticist adventuring in the frontiers of bioinformatics and breeding"
   email: garcia.alb@usp.br
   # Do not include the @ symbol in your Twitter username
-  twitter: @BassoLetycia
+  twitter: BassoLetycia
   linkedin: #AnaLetycia
-  github: @letyciabasso
+  github: letyciabasso
   orcid: #0000-0003-1497-2567
 
 # The following adjust the accents for your site. If you would like to further edit colors, fonts, font sizes, etc.
