--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@ logo: # filename of a logo image that has been placed into your images directory
 owner:
   name: Ana Letycia Basso Garcia
   avatar: photo.png
-  bio: Agronomist - Plant Geneticist
+  bio: "Agronomist - Plant Geneticist"
   email: garcia.alb@usp.br
   # Do not include the @ symbol in your Twitter username
   twitter: BassoLetycia
