--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -11,13 +11,13 @@
 - title: Bioinformatics 
   url: /Bioinformatics/
 
-- title: Plant Breeding and Quantitative Genetics 
+- title: Quantitative Genetics 
   url: /Plant Breeding/
 
 - title: Project Management
   url: /Project management/
   
-- title: Science Communication
+- title: SciComm
   url: /Science Communication/
 
 - title: Courses and Workshops
