--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -8,17 +8,17 @@
 - title: CV
   url: /cv/
 
+- title: Publications
+  url: /publications/
+  
 - title: Bioinformatics 
-  url: /Bioinformatics/
+  url: /bioinformatics/
 
-- title: Quantitative Genetics 
-  url: /Plant Breeding/
+- title: Plant Science 
+  url: /plant_science/
 
 - title: Project Management
-  url: /Project management/
+  url: /project_management/
   
-- title: SciComm
-  url: /Science Communication/
-
 - title: Courses and Workshops
-  url: /Courses and Workshops/
+  url: /courses_and_Workshops/
