--- a/_config.yml
+++ b/_config.yml
@@ -8,8 +8,8 @@ logo: # filename of a logo image that has been placed into your images directory
 owner:
   name: Ana Letycia Basso Garcia
   avatar: photo.png
-  bio: "Agronomist"
-  email: garcia.alb@usp.br
+  bio: "Ph.D. Genetics and Plant Breeding"
+  email: letyciabasso@gmail.com
   # Do not include the @ symbol in your Twitter username
   twitter: BassoLetycia
   linkedin: AnaLetycia
